// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account Params & body presence With testMode=false and devKey="hey" activatePayCard() 1`] = `
Object {
  "headers": Object {
    "Content-type": "application/json",
  },
  "hostname": "cp.websms.by",
  "method": "GET",
  "path": "/api/paycard_activate?devkey=hey&apikey=test&test=false&user=test&cardno=testcard&balance_type=0",
}
`;

exports[`Account Params & body presence With testMode=false and devKey="hey" getBalance() 1`] = `
Object {
  "headers": Object {
    "Content-type": "application/json",
  },
  "hostname": "cp.websms.by",
  "method": "GET",
  "path": "/api/user_balance?devkey=hey&apikey=test&test=false&user=test",
}
`;

exports[`Account Params & body presence With testMode=false and devKey="hey" getUserNames() 1`] = `
Object {
  "headers": Object {
    "Content-type": "application/json",
  },
  "hostname": "cp.websms.by",
  "method": "GET",
  "path": "/api/user_names?devkey=hey&apikey=test&test=false&user=test",
}
`;

exports[`Account Params & body presence With testMode=false and devKey="hey" getViberNames() 1`] = `
Object {
  "headers": Object {
    "Content-type": "application/json",
  },
  "hostname": "cp.websms.by",
  "method": "GET",
  "path": "/api/viber_user_names?devkey=hey&apikey=test&test=false&user=test",
}
`;

exports[`Account Params & body presence With testMode=true and devKey="" activatePayCard() 1`] = `
Object {
  "headers": Object {
    "Content-type": "application/json",
  },
  "hostname": "cp.websms.by",
  "method": "GET",
  "path": "/api/paycard_activate?devkey=&apikey=test&test=true&user=test&cardno=testcard&balance_type=0",
}
`;

exports[`Account Params & body presence With testMode=true and devKey="" getBalance() 1`] = `
Object {
  "headers": Object {
    "Content-type": "application/json",
  },
  "hostname": "cp.websms.by",
  "method": "GET",
  "path": "/api/user_balance?devkey=&apikey=test&test=true&user=test",
}
`;

exports[`Account Params & body presence With testMode=true and devKey="" getUserNames() 1`] = `
Object {
  "headers": Object {
    "Content-type": "application/json",
  },
  "hostname": "cp.websms.by",
  "method": "GET",
  "path": "/api/user_names?devkey=&apikey=test&test=true&user=test",
}
`;

exports[`Account Params & body presence With testMode=true and devKey="" getViberNames() 1`] = `
Object {
  "headers": Object {
    "Content-type": "application/json",
  },
  "hostname": "cp.websms.by",
  "method": "GET",
  "path": "/api/viber_user_names?devkey=&apikey=test&test=true&user=test",
}
`;
